# resolve-assistant

./: .env.example  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/agents/: code-reviewer.md
.claude/skills/publish/: SKILL.md
.claude/skills/resolve-conventions/: SKILL.md
docs/superpowers/plans/: 2026-04-08-ollama-gemma4-backend.md
resolve_assistant/: __init__.py  __main__.py  build_tools.py  config.py  ingest_tools.py  ingest_worker.py  key_moments.py  ollama_analyzer.py  prompts_analysis.py  resolve_build.py  schemas.py  transcode.py  whisper.py  whisper_tools.py
tests/: test_ollama_analyzer.py
